--- a/_config.yml
+++ b/_config.yml
@@ -1,21 +1,21 @@
-title: Hanlin Cai
+title: SMARTHOME
 # tagline: Two roads diverged in woods, I took the one less traveled by.
-description: Two roads diverged in woods, I took the one less traveled by.
+description: SMARTHOME
 #Comment out url when working locally to resolve base urls correctly
-url: https://caihanlin.com
+url: https://songninglai.github.io/
 
 # Owner/author information
 owner:
-  name: Hanlin Cai
-  avatar: hanlin.jpg
+  name: SMARTHOME
+  avatar: logo.png
 #  bio:
-  email: hanlin.cai@ieee.org
+  email: smarthome@smarthome.cn
   # Social networking links are used in author-bio sidebar. Update and remove as you like.
-  twitter: lancecai2002
+  twitter: smarthome2023
   # facebook: caihanlin2002
-  github: GuangLun2000
-  linkedin: hanlin-cai-07b53b23b
-  scholar: https://scholar.google.com/citations?user=8igSoWgAAAAJ
+  github: smarthome2023
+  linkedin: samrthome
+  scholar: https://songninglai.github.io/
   # instagram: lancecai2002
   # lastfm:
   # tumblr:
@@ -32,19 +32,19 @@ google_verify: "SkiyuGpJOKT74vv5GmXLvYXXDkXy4v8VWPtbelYz3Hs"
 # Links to include in top navigation
 # For external links add external: true
 links:
-  - title: About Me
+  - title: Company Introduction
     url: /
-  - title: Resume
-    url: /file/Resume-HanlinCAI.pdf
-  - title: Publications
+  - title: Product Introduction
+    url: /product/
+  - title: Technology
     url: /publications/
   - title: Projects
     url: /projects/
-  - title: Awards
+  - title: Fiance
     url: /awards/
-  - title: Hobbies
+  - title: Legal
     url: /hobbies/
-  - title: Blogs
+  - title: Forum
     url: /blogs/
 
 # http://en.wikipedia.org/wiki/List_of_tz_database_time_zones
