--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ url: https://songninglai.github.io/
 # Owner/author information
 owner:
   name: SMARTHOME
-  avatar: images/fav.jpg
+  avatar: fav.jpg
 #  bio:
   email: smarthome@smarthome.cn
   # Social networking links are used in author-bio sidebar. Update and remove as you like.
